clusters/home/apps/actual-budget/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
spec:
  selector:
    app: actual-budget
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  labels:
    name: actual-budget
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Actual Budget Server
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: actual-budget
    gethomepage.dev/name: Actual Budget
    gethomepage.dev/pod-selector: app=actual-budget
    gethomepage.dev/weight: "1"
spec:
  rules:
  - host: budget.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: actual-budget
            port: 
              number: 5006
